# arquitetura-software

./: .gitignore  .spectral.yaml  1.0 O que é uma arquitetura de software.md  1.1 Mapa e Estilos de Backend.md  1.1 O que é um estilo arquitetural.md  1.2 Estilo em Camadas.md  1.2 O Racional arquitetural e o conceito de ADRs.md  1.2.1 Exercícios de Fixação de Racional Arquitetural.md  1.2.1 Exercícios de Fixação do Estilo em Camadas.md  1.3 Estilo em Camadas.md  1.3 Pipes-filters.md  1.3 micro-kernel.md  1.3.1 Exercícios de Fixação do Estilo em Camadas.md  1.4 Micro-kernel.md  1.4 Pipes-filters.md  1.4.1 Exercícios de Fixação de Pipes and Filters and Microkernel.md  1.5 O Racional arquitetural e o conceito de ADRs.md  1.5 microsservicos.md  1.5.1 Exercícios de Fixação de Pipes and Filters and Microkernel.md  1.5.1 Exercícios de Fixação de Racional Arquitetural.md  1.8 Microsservicos.md  2.1 Estilo de APIs.md  2.2 Tipos de APIs.md  2.2.1 Exercicio de Fixação de Tipos de API.md  2.3 O processo de construir APIs.md  2.3 Plataforma de APIs.md  2.4 Plataforma de APIs.md  2.4.1 - Exercícios de Fixação de Processo e Plataforma de APIs.md  2.5 Gateway de API Minimo.md  2.6 API Gateway Ocelot.md  2.7 Cenarios de Gateway de API.md  2.8 Tecnologias de APIs.md  2.8.1 Exercícios de Fixação de Tecnologias de APIs.md  2.9 Caso Prático - Modelagem de uma Aplicação Hospitalar.md  3.1 Aprofundamento do Estilo de Microsserviços.md  3.1 Introdução a Microsservicos.md  3.10 Chassi Arquitetural.md  3.11 Caso Prático - Modelagem de uma Aplicação Hospitalar.md  (+42 more)
docs/: index.md
(+256 files in other folders)
