[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "plataforma-hospitalar"
version = "0.1.0"
description = "Workspace progressivo do caso integrador hospitalar"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "httpx",
  "psycopg[binary]",
  "aio-pika",
  "opentelemetry-sdk",
  "opentelemetry-exporter-otlp-proto-http",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
